--- a/cdui-showcase/Info.plist
+++ b/cdui-showcase/Info.plist
@@ -45,5 +45,12 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>cdui-showcase</string>
+		</dict>
+	</array>
 </dict>
 </plist>
